--- a/themes/light.qss
+++ b/themes/light.qss
@@ -44,6 +44,18 @@ QPushButton:pressed {
     background-color: #bfbfbf;
 }
 
+QPushButton:disabled {
+    background-color: #f0f0f0;
+    border: 1px solid #cccccc;
+    color: #aaaaaa;
+}
+
+QPushButton[status="disabled"] {
+    background-color: #f0f0f0;
+    border: 1px solid #cccccc;
+    color: #aaaaaa;
+}
+
 /* Labels */
 QLabel {
     color: #000000;
@@ -66,6 +78,12 @@ QLineEdit:focus {
 
 QLineEdit:hover {
     border: 1px solid #888888;
+}
+
+QLineEdit:disabled {
+    background-color: #f0f0f0;
+    border: 1px solid #cccccc;
+    color: #aaaaaa;
 }
 
 /* Sliders */
@@ -96,6 +114,12 @@ QComboBox {
 
 QComboBox:hover {
     background-color: #f5f5f5;
+}
+
+QComboBox:disabled {
+    background-color: #f0f0f0;
+    border: 1px solid #cccccc;
+    color: #aaaaaa;
 }
 
 QComboBox::drop-down {
